Hash collisions now handled correctly instead of delegating to baseline
- improved hash function for fewer collisions
- remaining collisions are now aggregated in concurrent hash map "aggregatedCollisions"
- removed CollisionException, abortRun and call to baseline implementation
- improved print function